--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
